--- a/frontend/res/styles/container2.css
+++ b/frontend/res/styles/container2.css
@@ -59,6 +59,7 @@ header > div:nth-child(2) input {
   height: 28px;
   border: none;
   padding: 0 10px;
+  color: whitesmoke;
   background-color: rgba(255, 255, 255, 0.1);
   font-size: 14px;
   line-height: 28px;
