--- a/frontend/res/styles/container2.less
+++ b/frontend/res/styles/container2.less
@@ -68,6 +68,7 @@ header {
       height: 28px;
       border: none;
       padding: 0 10px;
+      color: whitesmoke;
       background-color: rgba(255, 255, 255, .1);
       font-size: 14px;
       line-height: 28px;
