--- a/frontend/res/views/stockpool.html
+++ b/frontend/res/views/stockpool.html
@@ -87,7 +87,7 @@
         </div>
     </div>
     <modal title="确认" v-model="confirmDelete">
-        确定要删除这个策略吗？
+        确定要删除这个股票池吗？
         <div slot="modal-footer" class="modal-footer">
             <button type="button" class="btn btn-danger" v-on:click="deleteConfirm">确定删除</button>
             <button type="button" class="btn btn-default" @click="confirmDelete = false">取消</button>
