--- a/frontend/res/styles/backtest.less
+++ b/frontend/res/styles/backtest.less
@@ -11,9 +11,25 @@
     }
   }
 
+  .block {
+    margin-left: 30px;
+  }
+
   .table {
     .form-group {
       margin: 0;
     }
+
+    .red {
+      color: #db5542;
+    }
+
+    .green {
+      color: #53b37b;
+    }
+  }
+
+  .echarts {
+    width: 100%;
   }
 }
